--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Website</title>
 </head>
-<body
+<body>
+    <header>
+        How to Make a Website
+    </header>
     <p>
         New git Website
     </p>
